# interpreter

./: .gitignore  Cargo.toml  HELP.md  README.md  utils.scm
.github/workflows/: release.yml  rust.yml
scheme/: base.scm
sicp/: generic.scm  utils.scm
sicp/generic/: math.scm  scheme-number.scm
sicp/utils/: prime.scm  set.scm  table.scm
src/: completer.rs  debugger.rs  destructure.rs  environment.rs  envref.rs  errors.rs  expression.rs  global_thread_state.rs  integer.rs  interpreter.rs  io.rs  lexer.rs  libraries.rs  macros.rs  main.rs  memory.rs  native_closure.rs  number.rs  parser.rs  scheme.rs  sourcecode.rs  symbol.rs  syntax.rs  tracer.rs
src/debugger_imgui_frontend/: mod.rs  support_gfx.rs
src/debugger_imgui_frontend/resources/: sources.txt
src/integer/: impl_bigint.rs  impl_i64.rs
src/tests/: misc.rs  mod.rs  r7rs_6_2_equivalence_predicates.rs  r7rs_procedure_apply.rs
