[package]
name = "interpreter"
version = "0.2.1-dev"
authors = ["Martin Billinger <flkazemakase@gmail.com>"]
license = "GPL-3.0"
license-file = "LICENSE"
edition = "2018"

[features]
default = ["debugging", "bigint"]

debugging = [
    "thread-safe", "source-tracking",
    "gfx", "gfx_window_glutin", "glutin",
    "imgui", "imgui-sys", "imgui-gfx-renderer", "imgui-winit-support",
]

bigint = ["num-bigint", "num-rational/num-bigint-std"]

thread-safe = []
source-tracking = []

[dependencies]
clap = "3.0.0-beta.1"
gfx = { optional = true, version = "0.18.1" }
gfx_window_glutin = { optional = true, version = "0.31" }
glutin = { optional = true, version = "0.21" }
imgui = { optional = true, version = "0.0.23" }
imgui-sys = { optional = true, version = "0.0.23" }
imgui-gfx-renderer = { optional = true, version = "0.0.23" }
imgui-winit-support = { optional = true, version = "0.0.23" }
lazy_static = "1"
num-bigint = { optional = true, version = "0.3", features = ["rand"] }
num-complex = "0.3"
num-rational = "0.3"
num-traits = "0.2"
rand = "0.7"
rustyline = "6"
